# ComputerGraphicsCoursework

./: CMakeLists.txt  GL01Hello.cpp  Log.cpp  Log.h  Math.cpp  Math.h  README.md  main.cpp
source/: ClassesCpp.cpp  Constructors.cpp  Enums.cpp  Headerfiles.cpp  Inheritanceclass.cpp  LogHeader.cpp  LogHeader.h  Main.cpp  Static.cpp  function.cpp  function.h
