cmake_minimum_required(VERSION 4.1)
project(CppProgramming)

set(CMAKE_CXX_STANDARD 23)

add_executable(CppProgramming
        main.cpp
        Math.cpp
        Math.h
        EndBrace.h
        Log.cpp
        Log.h
        source/function.cpp
        source/function.h
        source/Headerfiles.cpp
        source/LogHeader.cpp
        source/LogHeader.h
        source/Common.h
        source/Static.cpp
        source/Main.cpp
        source/Enums.cpp
        source/ClassesCpp.cpp

)
